apps/ocr-app/deploy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ocr-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app: ocr-frontend
spec:
  selector:
    app: ocr-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: ocr-frontend
